# fake-useragent

./: Cargo.toml  README.md  user_agents
src/: browser.rs  lib.rs  main.rs
src/user_agent_string/: browser.rs  mod.rs
