[package]
name = "fake-useragent"
version = "0.1.1"
authors = ["Xavier Lau <c.estlavie@icloud.com>"]
edition = "2018"
repository = "https://github.com/AurevoirXavier/fake-useragent"
description = "User-Agent List, inspred by python module [fake-useragent](https://github.com/hellysmile/fake-useragent)"
keywords = ["useragent", "user-agent"]
license = "MIT/Apache-2.0"

[dependencies]
rand = "0.6.5"
reqwest = "0.9.9"
select = "0.4.2"
