[package]
name = "fake-useragent"
version = "0.1.3"
authors = ["Xavier Lau <c.estlavie@icloud.com>"]
edition = "2018"
repository = "https://github.com/AurevoirXavier/fake-useragent"
description = "up to date simple useragent faker with real world database, inspired by python module [fake-useragent](https://github.com/hellysmile/fake-useragent)"
readme = "README.md"
keywords = ["useragent", "user-agent"]
license = "MIT/Apache-2.0"

[dependencies]
rand = "0.6.5"
reqwest = "0.9.9"
select = "0.4.2"
